fix clients and hosting on mobile

--- a/sass/_clients.scss
+++ b/sass/_clients.scss
@@ -71,6 +71,7 @@ body:has(.projects-card-deck > div > .client-checkbox:checked) {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        gap: 1rem;
 
         .app-logo {
             width: 8rem;
@@ -87,6 +88,10 @@ body:has(.projects-card-deck > div > .client-checkbox:checked) {
             font-style: normal;
             font-weight: 700;
             font-size: 2rem;
+
+            @media (max-width: 767px) {
+                flex-direction: column;
+            }
 
             .maturity {
                 padding-block: .3rem;
@@ -141,6 +146,10 @@ body:has(.projects-card-deck > div > .client-checkbox:checked) {
     gap: .3rem 1rem;
     flex-wrap: wrap;
     margin-block: 2rem;
+
+    @media (max-width: 767px) {
+        gap: .3rem;
+    }
 
     a img {
         height: 54px;
