--- a/sass/_hosting.scss
+++ b/sass/_hosting.scss
@@ -1,6 +1,6 @@
 .hosting_page {
     margin: 0 auto;
-    padding: 5.625rem 0 2rem 0;
+    padding-block: 5.625rem 2rem;
     @media (max-width: 767px) {
         padding: 5.625rem 32px 2rem 32px;
     }
@@ -25,14 +25,9 @@
             flex-direction: column;
             justify-content: space-between;
 
-            padding: 24px;
+            padding: 32px;
             width: 100%;
-            max-width: 400px;
             margin: 0 auto;
-
-            @media (max-width: 767px) {
-                max-width: 300px;
-            }
 
             border: 1px solid #d2d2d2;
             border-radius: 16px;
